--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"experimentalDecorators": true,
 		"module": "umd",
 		"moduleResolution": "node",
-		"noImplicitAny": false,
+		"noImplicitAny": true,
 		"noImplicitThis": true,
 		"outDir": "_build/",
 		"removeComments": false,
